añadida imagen fondo forms

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -63,7 +63,7 @@
                     class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
             </div>
             <div class="flex justify-content-center md:justify-content-end">
-                <img src="assets/demo/images/landing/Boat.png" alt="Hero Image" class="w-9 md:w-auto">
+                <img src="assets/demo/images/landing/Boat.png" alt="Hero Image" class="w-9 md:w-8">
             </div>
         </div><br><br>
 
