terminado pag contactos

--- a/src/app/contacto/contacto/contacto.component.html
+++ b/src/app/contacto/contacto/contacto.component.html
@@ -73,8 +73,10 @@
                         <i class="pi pi-fw pi-map text-5xl text-purple-400"></i>
                     </div>
                     <h2 class="line-height-1 text-900 text-4xl font-normal">Nos encontramos en</h2>
-                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;">Paseo Marítimo Málaga, nº2</span><br>
-                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width: 650px;"><i class="pi pi-fw pi-envelope text-2xl text-purple-400"></i>E-mail: bahiamarcontacto@gmail.com</span>
+                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;"><i class="pi pi-fw pi-map-marker text-2xl text-purple-400"></i>Paseo Marítimo Málaga, nº2</span><br>
+                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width: 650px;"><i class="pi pi-fw pi-envelope text-2xl text-purple-400"></i>E-mail: bahiamarcontacto@gmail.com</span><br>
+                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width: 650px;"><i class="pi pi-fw pi-phone text-2xl text-purple-400"></i>Teléfono: 654398765</span><br>
+                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width: 650px;"><i class="pi pi-fw pi-twitter text-2xl text-purple-400"></i>Twitter: @bahiamarclub_oficial</span>
                 </div>
 
                 <div class="flex justify-content-end flex-order-1 sm:flex-order-2 col-12 lg:col-6 p-0">
