--- a/src/app/barcos/barcos/barcos.component.css
+++ b/src/app/barcos/barcos/barcos.component.css
@@ -1,32 +1,64 @@
 table {
     width: 100%;
-    max-width: 400px;
     margin: 50px auto;
+    border-radius: 1rem;
     border-collapse: collapse;
     background: #fff;
     box-shadow: 0px 0px 10px #999;
     font-size: 18px;
-}
-
-table th, table td {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  
+  table th,
+  table td {
     padding: 10px;
     border: 1px solid #ccc;
-}
-
-table th {
-    background: hwb(224 20% 7%);
+    word-break: break-word;
+    text-align: left;
+  }
+  
+  table th {
+    background: hwb(224, 20%, 7%);
     color: #fff;
     font-weight: bold;
-}
-
-table tbody tr:nth-child(even) {
+  }
+  
+  table tbody tr:nth-child(even) {
     background: #f2f2f2;
-}
-
-table tbody tr:hover {
+  }
+  
+  table tbody tr:hover {
     background: #ddd;
-}
-a,a:hover{
-  color: white;
-  text-decoration: none;
-}
+  }
+  
+  /* Estilos para tablets */
+  @media (max-width: 768px) {
+    table {
+      font-size: 16px;
+    }
+  }
+  
+  /* Estilos para smartphones */
+  @media (max-width: 576px) {
+    table {
+      font-size: 14px;
+      overflow-x: auto;
+      white-space: normal;
+    }
+  }
+  
+  /* Estilos para PCs */
+  @media (min-width: 992px) {
+    table {
+      max-width: 800px;
+    }
+  }
+  
+  /* Estilos para los enlaces */
+  a,
+  a:hover {
+    color: white;
+    text-decoration: none;
+  }
+  
