--- a/src/app/editarbarco/editarbarco/editarbarco.component.html
+++ b/src/app/editarbarco/editarbarco/editarbarco.component.html
@@ -9,7 +9,7 @@
                 <div>
                     <div class="pb-5">
                         <span class="p-float-label text-xl">
-                            <input type="text" id="matricula" [(ngModel)]="barco.matricula" pInputText class="w-full md:w-30rem" style="padding:1rem">
+                            <input type="text" id="matricula" [(ngModel)]="barco.matricula" pInputText class="w-full md:w-30rem" style="padding:1rem" readonly>
                             <label for="matricula">Matricula del barco</label>
                         </span>
                     </div>
